# atlas-config-program-client

./: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
.claude/: settings.local.json
src/: instructions_bincode.rs  lib.rs
src/hooked/: short_vec.rs
