[package]
edition = "2021"
name = "atlas-config-program-client"
version = "1.1.0"
authors = ["Atlas Chain <info@atlaschain.org>"]
description = "A generated Rust library for the Config program"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/atlaschainorg/atlas-config-program-client"

[lib]
name = "atlas_config_program_client"
path = "src/lib.rs"

[dependencies]
bincode = { version = "1.3.3", optional = true }
borsh = { version = "0.10" }
kaigan = { version = "0.2.5" }
serde = { version = "1.0.193", features = ["derive"], optional = true }

# Atlas dependencies using Git repositories
atlas-client = { git = "https://github.com/atlaschainorg/atlas-client", branch = "main", optional = true }
atlas-config-interface = { git = "https://github.com/atlaschainorg/atlas-config-interface", branch = "main", optional = true }
atlas-program = { git = "https://github.com/atlaschainorg/atlas-program", branch = "main", features = ["borsh"] }
atlas-sdk = { git = "https://github.com/atlaschainorg/atlas-sdk", branch = "main", optional = true }

[dev-dependencies]
assert_matches = { version = "1.5.0" }
bincode = { version = "1.3.3" }
atlas-sdk = { git = "https://github.com/atlaschainorg/atlas-sdk", branch = "main" }

[features]
fetch = ["dep:atlas-client", "dep:atlas-sdk"]
serde = [
    "dep:bincode", 
    "dep:serde", 
    "dep:atlas-config-interface", 
    "kaigan/serde", 
    "atlas-config-interface/bincode"
]
test-sbf = []